homeworks/gryshchenko/module-3/lesson-08/course-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-app-deployment
  labels:
    app: course-app
spec:
  replicas: 10
  selector:
    matchLabels:
      app: course-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: course-app
    spec:
      # Init container для очікування Redis
      containers:
        - name: course-app
          image: eugene45ua/course-app
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: appdata
              mountPath: /data
          # Проби для перевірки здоров'я контейнера
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
      volumes:
        - name: appdata
          emptyDir: {}
